--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
                     <p>Quickly monetize synergistic portals via efficient e-commerce. Phosfluorescently reinvent frictionless intellectual capital vis-a-vis an expanded array of niches. Efficiently provide access to interactive scenarios vis-a-vis bleeding-edge value. Energistically maximize premium meta-services and multifunctional collaboration and idea-sharing. Dramatically unleash front-end value after out-of-the-box opportunities. Energistically streamline magnetic action items after global markets. Collaboratively scale backward-compatible leadership skills and 24/7 best practices. Objectively exploit emerging methodologies vis-a-vis functionalized ideas. Energistically reconceptualize out-of-the-box innovation vis-a-vis cooperative methods of empowerment.</p>
                 </div>
                 <div class="button">
-                    <a class="button2" href="hw.html" class="button2">Homework</a>
+                    <a target="_blank" class="button2" href="hw.html" class="button2">Homework</a>
                 </div>
             </div>
         </div>
